Jupyter Update Push

--- a/pedestrian_detection_tutorial.ipynb
+++ b/pedestrian_detection_tutorial.ipynb
@@ -5,84 +5,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial\n",
-    "Import libraries\n"
+    "*** TEAM NOTES ***\n",
+    "- be sure to update all code segements at the very end before submitting to ensure it's the most recent code pushed to GH\n",
+    "\n",
+    "ENEL 645 Assignment 2\n",
+    "Animal Image Classification Model\n",
+    "Objectives Learned:\n",
+    "    - transfer learning using YoloV5 trained on Coco image dataset\n",
+    "    - implementation of convolutional neural networks (CNNs) using Pytorch\n",
+    "    - one-hot encoding\n",
+    "    - train validation test methods\n",
+    "Group 27:\n",
+    "    - Jose Eustaquio do Carmo Junior\n",
+    "    - Louis-Antoine Etchian\n",
+    "    - Michael Francis\n",
+    "    - Austyn Nagribiano\n",
+    "    - Peter Yuan\n",
+    "    - Mouri Zakir\n",
+    "\n",
+    "CONTENTS\n",
+    "1. Introduction\n",
+    "2. data\n",
+    "\n",
+    "\n",
+    "This tutorial will help you develop an understanding...\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from torch.utils.data import Dataset\n",
-    "import torch.nn as nn\n",
-    "from torchvision import transforms, models\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "import torch.optim as optim\n",
-    "from torch.optim.lr_scheduler import ExponentialLR\n",
-    "import argparse\n",
-    "from pedestrian_detection_utils import *"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Define arguments, check system"
-   ]
+    "Importing libraries"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": [
-    "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument('--learning_rate', type=float, default=1e-4, help='initial learning rate')\n",
-    "parser.add_argument('--batch_size', type=int, default=2,\n",
-    "                    help='batch size,  number of images in each iteration during training')\n",
-    "parser.add_argument('--epochs', type=int, default=100, help='total epochs')\n",
-    "parser.add_argument('--val_split', type=float, default=0.2, help='val split')\n",
-    "parser.add_argument('--test_split', type=float, default=0.2, help='test split')\n",
-    "parser.add_argument('--best_model_path', type=str, help='best model path')\n",
-    "parser.add_argument('--images_path', type=str, help='path to images')\n",
-    "parser.add_argument('--verbose', type=bool, default=True, help='verbose debugging flag')\n",
-    "parser.add_argument('--transfer_learning', type=bool, default=True, help='transfer learning flag')\n",
-    "\n",
-    "args = parser.parse_args(\"\")\n",
-    "\n",
-    "# Check if GPU is available\n",
-    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
-    "if args.verbose:\n",
-    "    print(device)\n",
-    "\n",
-    "print(args)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Instantiate arguments, prepare data"
-   ]
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
    "outputs": [],
-   "source": [
-    "args.images_path=\"path to images\"\n",
-    "# images = glob.glob(args.images_path)"
-   ]
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
