Final Jupyter Push

--- a/pedestrian_detection_tutorial.ipynb
+++ b/pedestrian_detection_tutorial.ipynb
@@ -146,7 +146,9 @@
    "source": [
     "Defining the model:\n",
     "\n",
-    "AnimalModel defines the model framework for the convolutional neural network (CNN). The mode takes in the number of classes, input shape of data, and a transfer learning flag as inputs. If transfer learning is activated, as in this project, the model obtains pre-trained weights from 'yoloV5'"
+    "AnimalModel defines the model framework for the convolutional neural network (CNN). The mode takes in the number of classes, input shape of data, and a transfer learning flag as inputs. If transfer learning is activated, as in this project, the model obtains pre-trained weights from 'YoloV5' and freezes the validation layers.\n",
+    "\n",
+    "Two methods are defined for this class: '_get_conv_output()' and 'forward()'. '_get_conv_output()' returns the number of features from the feature extractor, useful in initializing the final fully connected classification layer. 'forward()' makes the final pass of the data to the output. It applies the feature extractor to the input data, flattens, and then applies the final linear activation to classify the image."
    ],
    "metadata": {
     "collapsed": false
